--- a/ChatBotCyberSecurity/ChatBotCyberSecurity.csproj
+++ b/ChatBotCyberSecurity/ChatBotCyberSecurity.csproj
@@ -7,4 +7,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
+    <PackageReference Include="System.Windows.Extensions" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="files\chatbot.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="files\welcome_audio.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
