aded text file to store information on the chat

--- a/ChatBotCyberSecurity/ChatBotCyberSecurity.csproj
+++ b/ChatBotCyberSecurity/ChatBotCyberSecurity.csproj
@@ -16,6 +16,9 @@
     <None Update="files\chatbot.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="files\chatbotdata.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="files\welcome_audio.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
